<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/primary_background_pages"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/adminDashboardHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Admin Actions"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/adminDashboardHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.375"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">


        <Button
            android:id="@+id/btnEntrantProfiles"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/darker_teal"
            android:layout_marginBottom="20dp"
            android:text="Entrant Profiles"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnFacilityProfiles"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/darker_teal"
            android:layout_marginBottom="20dp"
            android:text="Facility Profiles"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnAllEvents"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/darker_teal"
            android:text="All Events"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>