<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_entrant"
        android:title="Joined Events" />

    <item
        android:id="@+id/navigation_organizer"
        android:title="Hosted Events" />

    <item
        android:id="@+id/navigation_admin"
        android:title="Admin" />

</menu>