<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background_pages"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/eventDetailsTextViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingBottom="16dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/photoPlaceholder"
            android:layout_width="363dp"
            android:layout_height="204dp"
            android:backgroundTint="@color/secondary_background_cards"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="16dp"
            android:background="#D3D3D3"
            app:cardCornerRadius="16dp">

            <ImageView
                android:id="@+id/eventDetailsImageView"
                android:layout_width="362dp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:visibility="visible" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/eventDetailsTextViewStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_priority_background"
            android:padding="4dp"
            android:text="Event Status"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/secondary_background_cards"
            android:layout_marginBottom="16dp"
            android:background="#F0F0F0"
            app:cardCornerRadius="16dp">

            <TextView
                android:id="@+id/eventDetailsTextViewDetails"
                android:backgroundTint="@color/secondary_background_cards"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:background="#F0F0F0"
                android:padding="12dp"
                android:textSize="16sp" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/eventDetailsTextViewLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/eventDetailsTextViewWaitingList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <!-- Waitlist Open Date -->
        <TextView
            android:id="@+id/eventDetailsTextViewRegistrationOpenDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <!-- Waitlist Close Date -->
        <TextView
            android:id="@+id/eventDetailsTextViewRegistrationDeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/eventDetailsTextViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/eventDetailsOrganizerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/eventDetailsFacilityEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/eventDetailsFacilityNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/eventDetailsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darker_teal"
            android:text="Event details button"
            android:layout_marginBottom="8dp" />

        <ImageButton
            android:id="@+id/eventDetailsBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:srcCompat="@drawable/baseline_arrow_back_24" />


    </LinearLayout>
</ScrollView>