...
            android:contentDescription="Profile"
            android:padding="10dp"
            android:layout_gravity="end" />
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/main_activity_fragment_container"
        android:name="com.example.tigers_lottery.Admin.AdminDashboardFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/secondary_background_cards"
        tools:layout_editor_absoluteX="225dp"
...
